# gann

./: CMakeLists.txt  LOGO  README.md
data/: chapter.txt  test.txt
include/: gann-lstm.h  gann-mlp.h  gann-rnn.h  gann-w2v.h  gann.h
src/: gann-lstm.c  gann-mlp.c  gann-w2v.c  gann.c
test/: gann-lstm-test-1.c  gann-mlp-test-iris.c  gann-w2v-test-analogy.c  gann-w2v-test-skipgram.c
